# sweep

./: Cargo.toml  LICENSE  README.md
src/: imap.rs  json.gbnf  main.rs
