[package]
name = "sweep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama_cpp = { path = "../llama_cpp-rs/crates/llama_cpp", features = ["metal"] }
mail-parser = "0.9.2"
native-tls = "0.2.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
imap = "2.4.1"
regex = "1.10.3"
